--- a/public_html/assets/plugins/themify/css/themify-icons.css
+++ b/public_html/assets/plugins/themify/css/themify-icons.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'themify';
 	src:url('../fonts/themify.eot');
-	src:url('../fonts/themifyd41dd41d.eot?#iefix') format('embedded-opentype'),
+	src:url('../fonts/themifyd41d.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/themify.woff') format('woff'),
 		url('../fonts/themify.ttf') format('truetype'),
 		url('../fonts/themify.svg') format('svg');
