--- a/public_html/admin/pdf/assets/css/style.css
+++ b/public_html/admin/pdf/assets/css/style.css
@@ -29,7 +29,7 @@ body {
   line-height: 22px;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
-  background-color: #535b61;
+  background-color: #FFFFFF;
 }
 
 table {
