--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -374,7 +374,10 @@ a:hover {
   padding-right: 10px;
   padding-left: 18px;
 }
-
+.nav-item.dropdown .dropdown-menu a {
+    color: #000;
+    padding: 6px 10px;
+}
 .fixed-top {
   position: fixed;
   z-index: 1030;
@@ -403,7 +406,7 @@ a:hover {
   padding: 0px;
   position: absolute;
   border-radius: 10px;
-  min-width: 135px;
+  min-width: 175px;
   margin: 10px 2px;
 }
 
@@ -418,6 +421,7 @@ a:hover {
   opacity: 1;
   visibility: visible;
   top: 100%;
+  padding-bottom: 20px;
 }
 
 .header-bar.fixed-header .main-navigation {
@@ -2354,7 +2358,7 @@ iframe#youtubevideo {
 }
 
 #terms-page {
-  margin-top: 140px;
+  margin-top: 20px;
 }
 
 .select-code {
@@ -2973,15 +2977,22 @@ iframe#youtubevideo {
 .where-boxing .form-group {
   width: 44%;
 }
-
 .payment-gateway .form-group {
-  width: 45%;
+    position: relative;
+    margin: 4px;
+    width: 65%;
 }
-
+.payment-gateway .form-group label {
+    font-size: 12px;
+}
 .payment-gateway .form-group input {
-    margin-top: -30px;
-    height: 24px;
-    margin-left: 72px;
+    margin-top: 0;
+    height: 20px;
+    float: right;
+    width: 40px;
+}
+.paymment-right-details h3 {
+    font-size: 20px;
 }
 .full-widthing {
   width: 40% !important;
@@ -3283,8 +3294,12 @@ iframe#youtubevideo {
     padding: 10px;
     border-radius: 6px;
     border: 1px solid #eee;
-    font-size: 14px;
+    font-size: 12px;
     cursor: pointer;
+    width: 48%;
+    float: left;
+    margin: 3px;
+    color: #000;
 }
 .cryptoPayments .form-group label {
     cursor: pointer;
@@ -3391,6 +3406,15 @@ iframe#youtubevideo {
 
   .navbar-toggler {
     background-color: #fff;
+  }
+  .inter-form .col-lg-12 {
+      padding: 0;
+  }
+  .inter-form .col-lg-12 .shp-list {
+      margin: 10px;
+  }
+  .step-image .img-responsive {
+      width: 100%;
   }
 
   .banner-content h1 {
@@ -3673,12 +3697,39 @@ iframe#youtubevideo {
     display: block !important;
   }
 
+  .youtube-video .modal-dialog {
+      max-width: 100% !important;
+  }
+  #video-container {
+      margin-top: 0px;
+  } 
   .shipment-heading {
     font-size: 23px;
   }
-
+  #close-video {
+      border: 2px solid;
+      font-size: 13px;
+      height: 35px;
+      width: 35px;
+      padding: 6px;
+      top: 0;
+      right: 20px;
+  }
   #signUpForm .form-header {
-    padding: 20px;
+    padding: 12px;
+  }
+  .select-code-packb select {
+      width: 42%;
+  }
+
+  .what-detail-iner table {
+      width: 100% !important;
+  }
+
+  .file-upload-wrapper:before {
+      top: 5px;
+      right: 5px;
+      font-size: 12px;
   }
 
   .maining-heading h3 {
@@ -4084,6 +4135,7 @@ iframe#youtubevideo {
       background: #eeeeee52;
       margin: 2px;
       border-radius: 5px;
+      font-size: 12px;
   }
 
   .signUpForm .form-header .stepIndicator::before {
@@ -4267,6 +4319,541 @@ iframe#youtubevideo {
       font-size: 16px !important;
   }
   .what-details {
+    margin: 10px 0px;
+  }
+
+  #margin-btm .about-item {
+    margin-left: 0px;
+  }
+
+  #margin-btm {
+    margin: 40px 0px;
+  }
+
+  #login-page .login-box p {
+    font-size: 14px;
+  }
+
+  #login-page .have-account a {
+    font-size: 15px;
+    margin-top: 15px;
+  }
+
+  #tracking-page .login-box {
+    width: 100%;
+    padding: 40px 20px;
+  }
+
+  #tracking-page .login-box h2 {
+    font-size: 20px;
+  }
+
+  #tracking-wdh form .form-group {
+    width: 100%;
+  }
+
+  .about-us h2 {
+    font-size: 23px;
+  }
+
+  #margin-btm {
+    margin: 20px 10px;
+  }
+
+  #support-page-start {
+    overflow: hidden;
+  }
+
+  .support-heading {
+    text-align: left !important;
+  }
+
+  .support-heading p {
+    width: 100%;
+  }
+
+  .support-heading p br {
+    display: none;
+  }
+
+  .contact-us-form button {
+    float: inherit;
+  }
+
+  #mainpopup .modal-dialog {
+    max-width: 95%;
+  }
+
+  .coming-text {
+    margin-top: 0px;
+  }
+
+  .popup-image img {
+    width: 100%;
+  }
+
+  .signUpForm .form-header {
+    display: inherit !important;
+    padding: 10px;
+  }
+
+  .signUpForm .form-header .stepIndicator {
+      padding: 5px;
+      width: 47%;
+      display: inline-block;
+      background: #eeeeee52;
+      margin: 2px;
+      border-radius: 5px;
+  }
+  .signUpForm .form-header .stepIndicator::before {
+    display: none;
+  }
+
+  .signUpForm .form-header .stepIndicator.active {
+      color: #fff !important;
+      background: #ff5d21;
+  }
+
+  .shipment-heading {
+    font-size: 23px;
+  }
+
+  .maining-heading h3 {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .inter-form .form-group {
+    width: 100%;
+  }
+
+  .signUpForm .form-footer button {
+    width: 80%;
+    margin: 10px;
+  }
+
+  .inter-form .form-group {
+    margin: 8px 10px 10px 0;
+  }
+
+  .file-upload-wrapper:after {
+    font-size: 8px;
+  }
+
+  .header-contact {
+      margin-left: 0px;
+      margin-top: 20px;
+  }
+
+  .center-icons {
+      right: 0px !important;
+  }
+
+  #head-icons {
+      right: 0;
+  }
+
+  .list-inline-item img.img-responsive {
+      width: 80%;
+  }
+
+  .navbar-nav.ml-auto {
+      border-left: none;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-link {
+      padding-left: 10px;
+      border-bottom: 1px solid #cbbfbf21;
+  }
+
+  .blog-item .blog-item-content {
+      text-align: center;
+  }
+
+  .footer-socials {
+      margin: 10px 0;
+  }
+
+  #about-page {
+      padding-bottom: 0 !important;
+  }
+
+  #about-page {
+      margin-top: 85px;
+  } 
+
+  #how-it-works-iner {
+      margin-top: 40px;
+  }
+
+  .shipment-details {
+      padding: 15px;
+  }
+
+  #calculate-form .sub-btns .btn {
+      padding: 15px 60px;
+  }
+
+  .shp-list {
+      margin: 30px 10px;
+  }
+
+  .create-right {
+      margin-top: 30px;
+      padding: 20px 20px 40px;
+      height: auto;
+  }
+
+  #tracking-page {
+      margin: 120px 0 40px;
+  }
+
+  #tracking-page form .form-group input {
+      padding: 0 12px 0 20px;
+  }
+
+  #login-page {
+      margin: 120px 0 50px;
+  }
+
+  #login-page .for-text {
+      text-align: center;
+  }
+
+  .profile-page-start {
+      margin: 100px 10px !important;
+  }
+
+  .profile-box {
+      width: 100%;
+  }
+
+  .profile-box-heading-img h2 {
+      font-size: 24px;
+  }
+
+  .sign-btns a {
+      width: 70%;
+      font-size: 18px;
+      padding: 10px;
+  }
+
+  .sign-btns a img {
+      width: 10%;
+  }
+
+  .change-password-p .modal-dialog {
+      max-width: 95%;
+      margin: 120px auto;
+  }
+
+  .change-password-p .modal-header .modal-title {
+      font-size: 20px;
+  }
+
+  .change-password-p #login-page {
+      padding: 0px 20px 20px;
+  }
+
+  #login-page  form .form-group input {
+      padding: 0 12px 0 60px;
+      font-size: 14px;
+  }
+
+  .change-password-p #login-page .login-box img {
+      left: 22px;
+      top: 15px;
+      width: 5%;
+  }
+
+  #login-page .sub-btns .btn {
+      font-size: 15px;
+  }
+
+  .shipment-history {
+      padding: 20px 10px;
+      overflow: scroll;
+  }
+
+  .view-btn a {
+      font-size: 9px;
+      padding: 5px 10px;
+  }
+  .shp-list {
+      margin: 30px 0px;
+  }
+  .shp-list p strong {
+      font-size: 16px !important;
+  }
+  .what-details {
+    margin: 10px 0px;
+  }
+
+  #margin-btm .about-item {
+    margin-left: 0px;
+  }
+
+  #margin-btm {
+    margin: 40px 0px;
+  }
+
+  #login-page .login-box p {
+    font-size: 14px;
+  }
+
+  #login-page .have-account a {
+    font-size: 15px;
+    margin-top: 15px;
+  }
+
+  #tracking-page .login-box {
+    width: 100%;
+    padding: 40px 20px;
+  }
+
+  #tracking-page .login-box h2 {
+    font-size: 20px;
+  }
+
+  #tracking-wdh form .form-group {
+    width: 100%;
+  }
+
+  .about-us h2 {
+    font-size: 23px;
+  }
+
+  #margin-btm {
+    margin: 20px 10px;
+  }
+
+  #support-page-start {
+    overflow: hidden;
+  }
+
+  .support-heading {
+    text-align: left !important;
+  }
+
+  .support-heading p {
+    width: 100%;
+  }
+
+  .support-heading p br {
+    display: none;
+  }
+
+  .contact-us-form button {
+    float: inherit;
+  }
+
+  #mainpopup .modal-dialog {
+    max-width: 95%;
+  }
+
+  .coming-text {
+    margin-top: 0px;
+  }
+
+  .popup-image img {
+    width: 100%;
+  }
+
+  .signUpForm .form-header {
+    display: inherit !important;
+    padding: 10px;
+  }
+
+  .signUpForm .form-header .stepIndicator {
+      padding: 5px;
+      width: 47%;
+      display: inline-block;
+      background: #eeeeee52;
+      margin: 2px;
+      border-radius: 5px;
+  }
+
+  .signUpForm .form-header .stepIndicator::before {
+    display: none;
+  }
+
+  .signUpForm .form-header .stepIndicator.active {
+      color: #fff !important;
+      background: #ff5d21;
+  }
+
+  .shipment-heading {
+    font-size: 23px;
+  }
+
+  .maining-heading h3 {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .inter-form .form-group {
+    width: 100%;
+  }
+
+  .signUpForm .form-footer button {
+    width: 80%;
+    margin: 10px;
+  }
+
+  .inter-form .form-group {
+    margin: 8px 10px 10px 0;
+  }
+
+  .file-upload-wrapper:after {
+    font-size: 8px;
+  }
+
+  .header-contact {
+      margin-left: 0px;
+      margin-top: 20px;
+  }
+
+  .center-icons {
+      right: 0px !important;
+  }
+
+  #head-icons {
+      right: 0;
+  }
+
+  .list-inline-item img.img-responsive {
+      width: 40%;
+  }
+
+  .navbar-nav.ml-auto {
+      border-left: none;
+  }
+
+  .navbar-expand-lg .navbar-nav .nav-link {
+      padding-left: 10px;
+      border-bottom: 1px solid #cbbfbf21;
+  }
+
+  .blog-item .blog-item-content {
+      text-align: center;
+  }
+
+  .footer-socials {
+      margin: 10px 0;
+  }
+
+  #about-page {
+      padding-bottom: 0 !important;
+  }
+
+  #about-page {
+      margin-top: 85px;
+  } 
+
+  #how-it-works-iner {
+      margin-top: 40px;
+  }
+
+  .shipment-details {
+      padding: 15px;
+  }
+
+  #calculate-form .sub-btns .btn {
+      padding: 15px 60px;
+  }
+
+  .shp-list {
+      margin: 30px 10px;
+  }
+
+  .create-right {
+      margin-top: 30px;
+      padding: 20px 20px 40px;
+      height: auto;
+  }
+
+  #tracking-page {
+      margin: 120px 0 40px;
+  }
+
+  #tracking-page form .form-group input {
+      padding: 0 12px 0 20px;
+  }
+
+  #login-page {
+      margin: 120px 0 50px;
+  }
+
+  #login-page .for-text {
+      text-align: center;
+  }
+
+  .profile-page-start {
+      margin: 100px 10px !important;
+  }
+
+  .profile-box {
+      width: 100%;
+  }
+
+  .profile-box-heading-img h2 {
+      font-size: 24px;
+  }
+
+  .sign-btns a {
+      width: 70%;
+      font-size: 18px;
+      padding: 10px;
+  }
+
+  .sign-btns a img {
+      width: 10%;
+  }
+
+  .change-password-p .modal-dialog {
+      max-width: 95%;
+      margin: 120px auto;
+  }
+
+  .change-password-p .modal-header .modal-title {
+      font-size: 20px;
+  }
+
+  .change-password-p #login-page {
+      padding: 0px 20px 20px;
+  }
+
+  #login-page  form .form-group input {
+      padding: 0 12px 0 60px;
+      font-size: 14px;
+  }
+
+  .change-password-p #login-page .login-box img {
+      left: 22px;
+      top: 15px;
+      width: 5%;
+  }
+
+  #login-page .sub-btns .btn {
+      font-size: 15px;
+  }
+
+  .shipment-history {
+      padding: 20px 10px;
+      overflow: scroll;
+  }
+
+  .view-btn a {
+      font-size: 9px;
+      padding: 5px 10px;
+  }
+  .shp-list {
+      margin: 30px 0px;
+  }
+  .shp-list p strong {
+      font-size: 16px !important;
+  }
+  .what-details {
       margin: 20px 0px;
   }
   .what-detail-iner table {
@@ -4316,34 +4903,10 @@ iframe#youtubevideo {
 #make-shipping .heading {
     margin-bottom: 20px;
 }
-.youtube-video .modal-dialog {
-    max-width: 100% !important;
 }
 
-#video-container {
-    padding-bottom: 90%;
+.shipmentInformation p {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 14px;
 }
-#close-video {
-    border: 2px solid;
-    font-size: 14px;
-    height: 35px;
-    width: 35px;
-    padding: 6px 5px;
-    top: 8%;
-    right: 5px;
-}
-
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
