--- a/public_html/admin/css/style.css
+++ b/public_html/admin/css/style.css
@@ -7703,3 +7703,175 @@ li.nav-item.dropdown.d-none.d-sm-block:nth-last-child(2) {
     }
 
 }
+/* > Process Styles */
+.process-wrap {
+    width: 100%;
+    margin: 10px auto;
+}
+.process-main {
+    width: 100%;
+    min-width: 320px;
+    display: flex;
+}
+.col-3 {
+width: 20%;
+max-width: 20%;
+position: relative;
+}
+.col-3:first-child .process-step:before {
+    content: '1';
+}
+.col-3:nth-child(2) .process-step:before{
+    content: '2';
+}
+.col-3:nth-child(3) .process-step:before {
+    content: '3';
+}
+.col-3:nth-child(4) .process-step:before {
+    content: '4';
+}
+.col-3:last-child .process-step:before{
+    content: '5';
+}
+.process-main .col-3:not(:first-child):before{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 98%;
+    height: 4px;
+    top: 17.5px;
+    left: calc(-50% + 20px);
+    right: 0;
+    background: #ebebeb;
+    border: 2px #ebebeb solid;
+    -o-transition: .4s;
+    -ms-transition: .4s;
+    -moz-transition: .4s;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.process-step-cont {
+    font-family: sans-serif;
+    font-size: 16px;
+    text-transform: capitalize;
+    text-decoration: none;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: space-between;
+}
+.process-step {
+    border: 5px #ebebeb solid;
+    border-radius: 100%;
+    line-height: 0;
+    background: #959595;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    display: flex;
+    color: #fff;
+    width: 35px;
+    height: 35px;
+    font-weight: 700;
+    margin-bottom: 7px;
+    z-index: 4;
+    cursor: pointer;
+}
+.process-label {
+    color: #959595;
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+}
+.process-dots {
+    width: 10px; 
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ebebeb;
+    cursor: pointer;
+}
+.process-dot-cont {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    width: 60%; 
+    padding-top: 5px;
+}
+.active-step1 .col-3:first-child .process-step,
+.active-step1 .col-3:first-child .process-dots:first-child,
+.active-step1-mini2 .col-3:first-child .process-step,
+.active-step1-mini2 .col-3:first-child .process-dots:nth-child(-n+2),
+.active-step1-mini3 .col-3:first-child .process-step,
+.active-step1-mini3 .col-3:first-child .process-dots:nth-child(-n+3),
+.active-step1-mini4 .col-3:first-child .process-step,
+.active-step1-mini4 .col-3:first-child .process-dots:nth-child(-n+4),
+.active-step1-mini5 .col-3:first-child .process-step,
+.active-step1-mini5 .col-3:first-child .process-dots:nth-child(-n+5)
+{
+    background-color: #ff5d21;
+}
+.active-step1-mini2 .col-3:first-child .process-dots:first-child,
+.active-step1-mini3 .col-3:first-child .process-dots:nth-child(-n+2),
+.active-step1-mini4 .col-3:first-child .process-dots:nth-child(-n+3)
+{
+    background-color: #fbcb93;
+}
+.active-step1 .col-3:first-child .process-label,
+.active-step1-mini3 .col-3:first-child .process-label,
+.active-step1-mini2 .col-3:first-child .process-label,
+.active-step1-mini4 .col-3:first-child .process-label,
+.active-step1-mini5 .col-3:first-child .process-label{
+    color: #ff5d21;
+}
+.active-step2 .col-3:first-child,
+.active-step3 .col-3:nth-child(-n+2),
+.active-step4 .col-3:nth-child(-n+3),
+.active-step5 .col-3:nth-child(-n+4){
+    opacity: 0.5;
+    /*pointer-events: none;*/
+}
+.active-step2 .col-3:first-child .process-step:before,
+.active-step3 .col-3:nth-child(-n+3) .process-step:before,
+.active-step4 .col-3:nth-child(-n+4) .process-step:before,
+.active-step5 .col-3:nth-child(-n+5) .process-step:before{
+    content: '\2713';
+    padding: 7px;
+}
+.active-step2 .col-3:nth-child(-n+2) .process-step,
+.active-step2 .col-3:nth-child(-n+2) .process-dots,
+.active-step3 .col-3:nth-child(-n+3) .process-step,
+.active-step3 .col-3:nth-child(-n+3) .process-dots,
+.active-step4 .col-3:nth-child(-n+4) .process-step,
+.active-step4 .col-3:nth-child(-n+4) .process-dots
+.active-step5 .col-3:nth-child(-n+5) .process-step,
+.active-step5 .col-3:nth-child(-n+5) .process-dots {
+    background-color: #ff5d21;
+}
+.active-step2 .col-3:nth-child(-n+2) .process-label,
+.active-step3 .col-3:nth-child(-n+3) .process-label,
+.active-step4 .col-3:nth-child(-n+4) .process-label,
+.active-step5 .col-3:nth-child(-n+5) .process-label{
+    color: #ff5d21;
+}
+.active-step2 .col-3:nth-child(-n+2):before,
+.active-step3 .col-3:nth-child(-n+3):before,
+.active-step4 .col-3:nth-child(-n+4):before,
+.active-step5 .col-3:nth-child(-n+5):before{
+    background: #ff5d21 !important;
+}
+@media screen and (max-width: 640px) {
+.process-main {
+    flex-wrap: wrap;
+}
+.col-3 {
+    width: 50%;
+}
+.process-main .col-3:nth-of-type(3):not(:first-child):before {
+    top: -19.5px;
+    left: calc(-50% + 145px);
+    transform: rotate(150deg);
+}
+}
