--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -3691,14 +3691,168 @@ iframe#youtubevideo {
 }
 
 
+#shipments-pg .inter-form {
+    padding: 30px;
+}
+#shipments-pg .inter-form table tr th, td {
+    border: 1px solid #eee;
+}
+#shipments-pg .inter-form table tr td p {
+    border-bottom: 1px dotted #eee;
+    padding: 0 0 5px 0;
+    color: #000;
+}
 
+#shipments-pg .inter-form .cryptoPayments .form-group label {
+    font-size: 14px;
+    font-weight: 600;
+}
+#shipments-pg .paymment-right-details {
+    width: 100%;
+    float: inherit;
+    background: #ff5d210d;
+    border-radius: 16px;
+    padding: 20px;
+    margin-bottom: 0;
+    padding-bottom: 30px;
+}
+#shipments-pg .paymment-right-details tbody td {
+    padding: 4px 0;
+    border: none;
+}
+#shipments-pg .cryptoPayments .form-group {
+    width: 49%;
+    margin: 3px;
+}
+#shipments-pg .payment-gateway .form-group input {
+    height: 20px;
+    width: 20px;
+}
+
+
+/*----=========== Buttons Css Start Here ==========---*/
+
+#eth-btn {
+    background-image: linear-gradient(to right, #ffb937,#ff8100,#fd833c);
+    border-bottom: 2px solid #e3510b;
+}
+#eth-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#bnb-btn {
+    background-image: linear-gradient(to right, #111411,#212620,#000000);
+    border-bottom: 2px solid #000;
+}
+#bnb-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#usdtbep-btn {
+    background-image: linear-gradient(to right, #64b16d,#70c965,#3a835e);
+    border-bottom: 2px solid #33856d;
+}
+#usdtbep-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#usdterc-btn {
+    background-image: linear-gradient(to right, #767fe3,#428ad5,#6b7edb);
+    border-bottom: 2px solid #5b5ebd;
+}
+#usdterc-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#saitamaerc-btn {
+    background-image: linear-gradient(to right, #1825b5,#0559b1,#00157c);
+    border-bottom: 2px solid #5b5ebd;
+}
+#saitamaerc-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#mazi-btn {
+    background-image: linear-gradient(to right, #574cfd,#04baff,#04baff);
+    border-bottom: 2px solid #5b5ebd;
+}
+#mazi-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#ht-token-btn {
+    background-image: linear-gradient(to right, #4604af,#190646,#210968);
+    border-bottom: 2px solid #05074e;
+}
+#ht-token-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#credit-crd-btn {
+    background-image: linear-gradient(to right, #5e2e7c,#392b42,#141012);
+    border-bottom: 2px solid #00000059;
+}
+#credit-crd-btn label {
+    margin: 0;
+    color: #fff;
+    font-size: 14px !important;
+    font-style: italic;
+}
+
+#paymentUpdateForm .modal-dialog {
+    z-index: 111111;
+    margin-top: 160px;
+}
+#pp-btns button {
+    width: 49%;
+    font-size: 15px;
+    border-bottom: 5px solid #dddddd;
+    padding: 10px;
+    background: #eee;
+    color: #000;
+}
+/*----=========== Buttons Css End Here ==========---*/
 
 @media only screen and (max-width: 767px) {
 
   #signUpForm .form-header {
     display: block !important;
   }
-
+  #shipments-pg .cryptoPayments .form-group {
+      width: 95% !important;
+  }
+  #shipments-pg .inter-form {
+      padding: 12px !important;
+  }
+  table.table.shipmentInformation td {
+      white-space: nowrap;
+  }
+  #pp-btns button {
+      width: 100% !important;
+      font-size: 15px;
+      margin-bottom: 10px;
+  }
   .youtube-video .modal-dialog {
       max-width: 100% !important;
   }
