--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -5353,3 +5353,19 @@ iframe#youtubevideo {
     top: 0;
   }
 }
+.walletConnected {
+  text-align: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+.walletConnected button {
+  background: #ff0000;
+  color: #ffffff;
+  border: 0px;
+  padding: 5px 20px;
+  border-radius: 6px;
+}
+.walletConnected button.walletConnect {
+  background: #0a8dfd;
+}
